--- a/index.qmd
+++ b/index.qmd
@@ -14,3 +14,10 @@ The preprint of the MOTION-BIDS paper is available on [OSF](https://osf.io/prepr
 Here are some talks about MOTION-BIDS from the past:
 
 - Methods In Mobile EEG, Belgrade 2023 - [Slides](https://juliuswelzel.github.io/bids_belgrade_2023/#/title-slide)
+- Open Science Series, Oldenburg 2024 - [Uploaded once completed](work in progress)
+
+## Tutorials
+You can browse the tutorials to get started with MOTION-BIDS or BIDS in general:
+
+- BIDS specification, a greate place to start - [Link](https://bids-specification.readthedocs.io/)
+- Motion data to BIDS in Fieldtrip - [Link](https://www.fieldtriptoolbox.org/example/bids_motion/)
