--- a/index.qmd
+++ b/index.qmd
@@ -21,3 +21,9 @@ You can browse the tutorials to get started with MOTION-BIDS or BIDS in general:
 
 - BIDS specification, a greate place to start - [Link](https://bids-specification.readthedocs.io/)
 - Motion data to BIDS in Fieldtrip - [Link](https://www.fieldtriptoolbox.org/example/bids_motion/)
+
+## Example data sets
+- Data sets on BIDS-examples demonstrate file names and folder structure but do not include the actual data. Data set 2. is found in full version on OpenNeuro, see link below.
+  - 1. Data set ["dual task"](https://github.com/bids-standard/bids-examples/tree/master/motion_dualtask) shows data from optical motion capture system used with EEG. Provided by Janna Protzak & Klaus Gramann. 
+  - 2. Date set ["spot rotation"](https://github.com/bids-standard/bids-examples/tree/master/motion_spotrotation) contains data from another EEG + motion capture experiment with optical and VR-based motion tracking. On OpenNeuro the [full data set](https://openneuro.org/datasets/ds004460/versions/1.1.0) is found including position, orientation values as well as EEG data. Provided by Klaus Gramann, published as Gramann et al., (2021) "Human cortical dynamics during full-body heading changes". 
+  - 3. Data set ["system validation"](https://github.com/bids-standard/bids-examples/tree/master/motion_systemvalidation) contains motion data collected using IMUs and an optical system simultaneously. Provided by Elke Warmerdam, published as Warmerdam et al., (2021) "Proposed Mobility Assessments with Simultaneous Full-Body Inertial Measurement Units and Optical Motion Capture in Healthy Adults and Neurological Patients for Future Validation Studies: Study Protocol".
