[ADD] update workshops and presentations section

--- a/index.qmd
+++ b/index.qmd
@@ -13,9 +13,10 @@ The MOTION-BIDS paper is available [online](https://www.nature.com/articles/s415
 ## Workshops and presentations 
 Here are some talks or posters about MOTION-BIDS from the past :
 
+- imove, Lübeck, 2025 - [Materials](https://github.com/JuliusWelzel/imove_bids_handson/tree/master) 
 - Mobile Brain Imaging Conference (MOBI), Piran, 2024 - Workshop by Sein Jeung & Julius Welzel
   [Slides](slides/2406_ngmt_mobi.pdf)
-- Psychologie & Gehirn ([IGOR Prize](https://www.dgps.de/fachgruppen/fgbi/aktivitaeten-der-fachgruppe/igor/)), Hamburg 2024 - Poster by Julius Welzel 
+- Psychologie & Gehirn, Hamburg 2024 - Poster by Julius Welzel 
   [Poster](slides/08_welzel.pdf)
 - Open Science Series, Oldenburg 2024 - Workshop by Julius Welzel
   [Slides](slides/2405_bidsIntro_oldenburg_welzel.pdf)
